Fixed css line through to work on safari

--- a/angular-src/src/app/components/dashboard/dashboard.component.css
+++ b/angular-src/src/app/components/dashboard/dashboard.component.css
@@ -61,13 +61,7 @@ li:nth-child(even) {
   cursor: pointer;
 }
 
-.completed {
-  text-decoration: line-through;
-  color: red;
-}
-
-
 .completed .todoBox .todo {
   -webkit-text-decoration-line: line-through;
-  color: red;
+  -webkit-text-decoration-color: red;
 }
